--- a/week_4/text/week_4.tex
+++ b/week_4/text/week_4.tex
@@ -129,7 +129,18 @@ We designed \texttt{IFdStream} and \texttt{OFdStream}, which are \texttt{istream
 \clearpage
 
 \section*{Exercise 31}
-\desc{}
+\desc{Learn to broaden your view about polymorphism}
+
+We used the following code,
+
+\lstinputlisting[title=\texttt{a/a.h}]{../ex31/a/a.h}
+\lstinputlisting[title=\texttt{base/base.h}]{../ex31/base/base.h}
+\lstinputlisting[title=\texttt{c/c.h}]{../ex31/c/c.h}
+\lstinputlisting[title=\texttt{main.ih}]{../ex31/main.ih}
+\lstinputlisting[title=\texttt{main.cc}]{../ex31/main.cc}
+
+The program gives the desired output; the same as in the exercise stated.
+This non-polymorphic clonings is ill-advised, because ...
 
 \clearpage
 
