--- a/week_6/text/week_6.tex
+++ b/week_6/text/week_6.tex
@@ -49,17 +49,23 @@
 \maketitle
 
 \section*{Exercise 42}
-\desc{}
+\desc{Learn to extract lines using generic algorithms into a container holding \texttt{string} objects, although \texttt{operator>>()} extracts strings}
+
+\lstinputlisting[title=\texttt{main.cc}]{../ex42/main.cc}
 
 \clearpage
 
 \section*{Exercise 43}
-\desc{}
+\desc{Learn to use promotion with generic algorithms and predefined function objects when manipulating basic data types.}
+
+\lstinputlisting[title=\texttt{main.cc}]{../ex43/main.cc}
 
 \clearpage
 
 \section*{Exercise 44}
-\desc{}
+\desc{Learn to recognize a situation where lambda functions may be used}
+
+\lstinputlisting[title=\texttt{main.cc}]{../ex44/main.cc}
 
 \clearpage
 
