--- a/week_6/text/week_6.tex
+++ b/week_6/text/week_6.tex
@@ -78,12 +78,14 @@
 \clearpage
 
 \section*{Exercise 45}
-\desc{}
+\desc{Learn to use generic algorithms to remove elements from a vector}
 
 \clearpage
 
 \section*{Exercise 46}
-\desc{}
+\desc{Learn to distinguish two frequently used generic algorithms}
+
+
 
 \clearpage
 
