--- a/week_7/text/week_7.tex
+++ b/week_7/text/week_7.tex
@@ -80,7 +80,9 @@ We used the following code.
 
 \lstinputlisting[title=\texttt{handler/handler.ih}]{../ex52/handler/handler.ih}    
 \lstinputlisting[title=\texttt{handler/handler.h}]{../ex52/handler/handler.h}    
-\lstinputlisting[title=\texttt{handler/shift.cc}]{../ex52/handler/shift.cc}      
+\lstinputlisting[title=\texttt{handler/shift.cc}]{../ex52/handler/shift.cc}    
+\lstinputlisting[title=\texttt{main.ih}]{../ex52/main.ih}
+\lstinputlisting[title=\texttt{callshift.cc}]{../ex52/callshift.cc}
 \lstinputlisting[title=\texttt{main.cc}]{../ex52/main.cc}
 
 \clearpage
