--- a/week_8/text/week_8.tex
+++ b/week_8/text/week_8.tex
@@ -48,52 +48,49 @@
 \maketitle
 
 \section*{Exercise 57}
-\desc{}
+\desc{Learn to design and implement a Semaphore class}
+
+We used the following code,
+
+\lstinputlisting[title=\texttt{semaphore/semaphore.h}]{../ex57/semaphore/semaphore.h} 
+\lstinputlisting[title=\texttt{semaphore/semaphore.ih}]{../ex57/semaphore/semaphore.ih} 
+\lstinputlisting[title=\texttt{semaphore/notify.cc}]{../ex57/semaphore/notify.cc}
+\lstinputlisting[title=\texttt{semaphore/notifyall.cc}]{../ex57/semaphore/notifyall.cc}
+\lstinputlisting[title=\texttt{semaphore/wait.cc}]{../ex57/semaphore/wait.cc}
 
 \clearpage
 
 \section*{Exercise 58}
-\desc{}
+\desc{Become familiar with \texttt{packaged\_task}}
+
+We used the following code,
+
+\lstinputlisting[title=\texttt{main.cc}]{../ex58/main.cc}
 
 \clearpage
 
 \section*{Exercise 59}
-\desc{}
+\desc{Become familiar with \texttt{packaged\_task (2)}}
+
+
 
 \clearpage
 
 \section*{Exercise 60}
-\desc{}
+\desc{Learn to implement a multi-threaded algorithm (2)}
 
-\clearpage
+We used the following code,
 
-\section*{Exercise 61}
-\desc{}
+\lstinputlisting[title=\texttt{main.cc}]{../ex60/main.cc}
 
 \clearpage
 
 \section*{Exercise 62}
-\desc{}
+\desc{Learn to inspect one or more \texttt{futures} from inside a repeat-statement, even if the future has not yet been made ready}
 
-\clearpage
+We used the following code,
 
-\section*{Exercise 63}
-\desc{}
-
-\clearpage
-
-\section*{Exercise 64}
-\desc{}
-
-\clearpage
-
-\section*{Exercise 65}
-\desc{}
-
-\clearpage
-
-\section*{Exercise 66}
-\desc{}
+\lstinputlisting[title=\texttt{main.cc}]{../ex62/main.cc}
 
 \clearpage
 
