--- a/week_8/text/week_8.tex
+++ b/week_8/text/week_8.tex
@@ -97,7 +97,7 @@ We used the following code,
 \desc{Learn to inspect one or more \texttt{futures} from inside a repeat-statement, even if the future has not yet been made ready}
 
 For the case of one thread, we used the code below. \\
-In the case of multiple threads, some modifications are required. We propose to store the wanted number of threads in an enum. Then define an array of this size holding \texttt{future} objects. Then in a for loop start all the threads using \texttt{async}, and store the returned \texttt{future} object in the array. Then in the eternal while loop the main task is done, and the inspection. This inspection consists of a for loop over the future-array, checking if any is ready in the same way as in the code below. If this is the case, you should break from the while loop. In order to retrieve the message, the index of the specific \texttt{future} object is needed. Therefore, the \texttt{idx} parameter of the last for loop should be defined outside this loop.   
+In the case of multiple threads, some modifications are required. We propose to store the wanted number of threads in an enum. Then define an array of this size holding \texttt{future} objects. Then in a for loop start all the threads using \texttt{async}, and store the returned \texttt{future} object in the array. Then in the eternal while loop the main task is done and at regular times an inspection, just as is done in the code below. This inspection consists of a for loop over the future-array, checking if any is ready in the same way as in the code below. If this is the case, you should break from the while loop. In order to retrieve the message, the index of the specific \texttt{future} object is needed. Therefore, the \texttt{idx} parameter of the last for loop should be defined outside this loop.   
 
 \lstinputlisting[title=\texttt{main.cc}]{../ex62/main.cc}
 
