--- a/week_8/text/week_8_rev.tex
+++ b/week_8/text/week_8_rev.tex
@@ -50,7 +50,7 @@
 \section*{Exercise 58}
 \desc{Become familiar with \texttt{packaged\_task}}
 
-We used the following code,
+\textbf{In the previous attempt, we had made \texttt{lhs}, \texttt{rhsT} and \texttt{fut} global. Also, we didn't use the defined enums everywhere. Furthermore, we used our own function to compute an inner product and didn't return nonzero in the case of an exception. All these things are improved now.}
 
 \lstinputlisting[title=\texttt{main.cc}]{../ex58_rev/main.cc}
 
@@ -59,7 +59,7 @@ We used the following code,
 \section*{Exercise 60}
 \desc{Learn to implement a multi-threaded algorithm (2)}
 
-We used the following code,
+\textbf{In the previous attempt, it was not guaranteed that the threads finish before the function returns. This is fixed now.}
 
 \lstinputlisting[title=\texttt{main.cc}]{../ex60_rev/main.cc}
 
